fix spacing on small devices
.section-caption and .headline--secondary

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -90,10 +90,12 @@
   line-height: 1.54;
   border-top: $main-border;
   border-bottom: $main-border;
-  padding: .5em .75em;
   font-size: 1.3em;
+  padding: .5em .5em;
   @media (min-width: 768px) {
     font-size: 1.625em;
+    padding-left: .75em;
+    padding-right: .75em;
   }
 }
 
@@ -111,9 +113,12 @@
 .section-caption {
   font-family: $font-stack-primary;
   font-size: 1.125em;
-  padding: 0 1.25em;
   margin: .5em 0;
   color: map-get($type-colors, 2);
+  padding: 0 .5em;
+  @media (min-width: 768px) {
+    padding: 0 1.25em;
+  }
 }
 
 .card-caption,
